[package]
name = "nebula_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json= "*"
serde_yaml = "*"

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock"
]